--- a/calculadora.html
+++ b/calculadora.html
@@ -3,7 +3,7 @@
 <h1>JavaScript Calculadora</h1>
 <div class="corpo">
   <div id="viewer" class="viewer"></div>
-  <button id="clear" class="clear"><img src="alooo.png"> </button>
+  <button id="clear" class="clear"><img src="limpar.png"> </button>
   <button id="divided" class="ops">/</button>
   <button id="times" class="ops">*</button>
 
