atualização de funcinalidades e JS

--- a/calculadora.html
+++ b/calculadora.html
@@ -4,8 +4,8 @@
 <div class="corpo">
   <div id="viewer" class="viewer"></div>
   <button id="clear" class="clear"><img src="limpar.png"> </button>
-  <button id="divided" class="ops">/</button>
-  <button id="times" class="ops">*</button>
+  <button data-ops="divided by" id="divided" class="ops">/</button>
+  <button data-ops="times" id="times" class="ops">*</button>
 
   <button class="num" data-num="7">7</button>
   <button class="num" data-num="8">8</button>
@@ -15,7 +15,7 @@
   <button class="num" data-num="4">4</button>
   <button class="num" data-num="5">5</button>
   <button class="num" data-num="6">6</button>
-  <button id="plus" class="ops">+</button>
+  <button divided by="plus" id="plus" class="ops">+</button>
 
   <button class="num" data-num="1">1</button>
   <button class="num" data-num="2">2</button>
@@ -26,4 +26,4 @@
   <button id="equals" class="equals" data-result="">=</button>
 </div>
 <p class="warning">Error</p>
-<script src="calculadora.js"></script>
+<script src="calculador1.js"></script>
